@@ -2,29 +2,57 @@ package de.nehlen.bingo.data;
 
 
 import de.nehlen.bingo.sidebar.SidebarPage;
+import lombok.Getter;
+import net.kyori.adventure.key.Key;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.text.minimessage.MiniMessage;
 
-import java.util.Arrays;
 import java.util.List;
 
+@Getter
 public enum ScoreboardData implements SidebarPage {
-    PAGE_1("§7» §b§lBingo §8| 1/2", Arrays.asList("§r", "§8➤ §9§lTeam", "%team%", "§r", "§8➤ §9§lPhase", "%gamestatus%", "§r", "§8➤ §9§lZeit", "%timer%", "§r", "§r", "§7spookly.de")),
-    PAGE_2("§7» §b§lBingo §8| 2/2",Arrays.asList("§r", "§8➤ %item1%","§8➤ %item2%","§8➤ %item3%","§8➤ %item4%","§8➤ %item5%","§8➤ %item6%","§8➤ %item7%","§8➤ %item8%","§8➤ %item9%", "", "§7spookly.de"));
+//    decorate(TextDecoration.BOLD)
+    PAGE_1(List.of(
+            Component.empty(),
+            title("bingo.data.scoreboard.team"),
+            Component.text("%team%"),
+            Component.empty(),
+            title("bingo.data.scoreboard.phase"),
+            Component.text("%gamestatus%"),
+            Component.empty(),
+            title("bingo.data.scoreboard.time"),
+            Component.text("%timer%"),
+            Component.empty(),
+            Component.empty(),
+            MiniMessage.miniMessage().deserialize("<gradient:#FF5555:#FFAA00>spookly.de")
+    )),
+    PAGE_2(List.of(
+            Component.empty(),
+            Component.text("%item1%"),
+            Component.text("%item2%"),
+            Component.text("%item3%"),
+            Component.text("%item4%"),
+            Component.text("%item5%"),
+            Component.text("%item6%"),
+            Component.text("%item7%"),
+            Component.text("%item8%"),
+            Component.text("%item9%"),
+            Component.empty(),
+            MiniMessage.miniMessage().deserialize("<gradient:#FF5555:#FFAA00>spookly.de")
+    ));
 
-    private final List<String> lines;
+    private final List<Component> lines;
 
-    private final String displayName;
-
-
-    ScoreboardData(String displayName, List<String> lines) {
-        this.displayName = displayName;
+    ScoreboardData(List<Component> lines) {
         this.lines = lines;
     }
-
-    public String getDisplayName() {
-        return this.displayName;
+    public Component getDisplayName() {
+        return Component.text(StringData.getScoreboardTitle()).font(Key.key("scoreboard"));
     }
 
-    public List<String> getLines() {
-        return this.lines;
+    private static Component title(String key) {
+        return Component.translatable(key).color(StringData.getHighlightColor()).font(Key.key("small"));
     }
 }
